--- a/mongo/pom.xml
+++ b/mongo/pom.xml
@@ -13,7 +13,7 @@
 
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>demo</artifactId>
+        <artifactId>springboot</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
