--- a/restdocs/pom.xml
+++ b/restdocs/pom.xml
@@ -12,7 +12,7 @@
 
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>demo</artifactId>
+        <artifactId>springboot</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
